--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>sayooj</title>
+  <title>sayooj API</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -71,11 +71,12 @@
 
 <body>
   <div class="info">
-    <h1>note</h1>
+    <h1>Sayooj API</h1>
     <p>Version 1.0.0</p>
 
     <h3>OpenAPI spec: <a href="./openapi.json">/openapi.json</a></h3>
     <h3>API Explorer: <a href="./explorer">/explorer</a></h3>
+     <h3>Contact Me : <a href="mailto:"sayoojanil977@gmail.com">sayoojanil977@gmail.com</a></h3>
   </div>
 
   <footer class="power">
