--- a/public/index.html
+++ b/public/index.html
@@ -71,18 +71,16 @@
 
 <body>
   <div class="info">
-    <h1>Sayooj API</h1>
-    <p>Version 1.0.0</p>
-
+    <h1>Sayooj API </h1>
+    <p>Server is running....</p>
+<!--
     <h3>OpenAPI spec: <a href="./openapi.json">/openapi.json</a></h3>
     <h3>API Explorer: <a href="./explorer">/explorer</a></h3>
-     <h3>Contact Me : <a href="mailto:"sayoojanil977@gmail.com">sayoojanil977@gmail.com</a></h3>
+     <h3>Contact Me : <a href="mailto:"sayoojanil977@gmail.com">sayoojanil977@gmail.com</a></h3> -->
   </div>
 
   <footer class="power">
-    <a href="https://loopback.io" target="_blank">
-      <img src="https://loopback.io/images/branding/powered-by-loopback/blue/powered-by-loopback-sm.png" />
-    </a>
+
   </footer>
 </body>
 
